--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,19 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
     }
 }
 
@@ -38,4 +45,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     compile 'com.code-troopers.betterpickers:library:3.1.0'
+    compile 'com.github.BlackBoxVision:material-calendar-view:v1.5.2'
 }
