--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     compile 'com.code-troopers.betterpickers:library:3.1.0'
-    compile 'com.github.BlackBoxVision:material-calendar-view:v1.5.2'
+    /*compile 'com.github.BlackBoxVision:material-calendar-view:v1.5.2'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'*/
 }
