--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        jackOptions {
+        /*jackOptions {
             enabled true
-        }
+        }*/
     }
     buildTypes {
         release {
@@ -21,13 +21,13 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_7
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -44,7 +44,10 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
-    compile 'com.code-troopers.betterpickers:library:3.1.0'
-    /*compile 'com.github.BlackBoxVision:material-calendar-view:v1.5.2'
-    compile 'com.prolificinteractive:material-calendarview:1.4.3'*/
+    compile 'com.github.adhishlal:gifloader:1.1'
+    //compile 'com.code-troopers.betterpickers:library:3.1.0'
+    //compile 'com.github.BlackBoxVision:material-calendar-view:v1.5.2'
+    //compile 'com.prolificinteractive:material-calendarview:1.4.3'
+    compile 'com.github.lecho:hellocharts-android:v1.5.8'
+    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
 }
