--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:label="@string/calendar_title"
             android:theme="@style/AppTheme.NoActionBar"/>
 
+        <activity android:name=".activity.HistoryActivity"
+            android:label="@string/history_title"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
