--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,8 @@ dependencies {
     //compile 'com.prolificinteractive:material-calendarview:1.4.3'
     compile 'com.github.lecho:hellocharts-android:v1.5.8'
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
