--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:name=".MyWorkoutTrackerApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_mwt"
         tools:replace="android:icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -30,7 +30,7 @@
 
         <activity android:name=".activity.ForgotPasswordActivity"
             android:label="@string/forgot_password_title"
-            android:theme="@style/AppTheme"
+            android:theme="@style/ForgotPasswordTheme"
             android:configChanges="orientation"
             android:screenOrientation="portrait"/>
 
