--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
