--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    //compile 'com.code-troopers.betterpickers:library:3.1.0'
+    //compile 'com.github.BlackBoxVision:material-calendar-view:v1.5.2'
+    //compile 'com.prolificinteractive:material-calendarview:1.4.3'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:design:25.3.0'
     compile 'com.google.code.gson:gson:2.4'
@@ -45,16 +48,15 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     compile 'com.github.adhishlal:gifloader:1.1'
-    //compile 'com.code-troopers.betterpickers:library:3.1.0'
-    //compile 'com.github.BlackBoxVision:material-calendar-view:v1.5.2'
-    //compile 'com.prolificinteractive:material-calendarview:1.4.3'
     compile 'com.github.lecho:hellocharts-android:v1.5.8'
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.google.firebase:firebase-database:10.0.1'
-    compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
+    compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    compile 'me.relex:circleindicator:1.2.1@aar'
+    testCompile 'junit:junit:4.12'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
