--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,14 @@ dependencies {
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     compile 'com.github.adhishlal:gifloader:1.1'
     compile 'com.github.lecho:hellocharts-android:v1.5.8'
-    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    /*compile 'com.github.lecho:hellocharts-library:1.5.8@aar'*/
     compile 'com.google.firebase:firebase-core:10.2.0'
     compile 'com.google.firebase:firebase-auth:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     compile 'me.relex:circleindicator:1.2.1@aar'
+    compile 'me.biubiubiu.justifytext:library:1.1'
+    compile 'com.github.DanielMartinus:Stepper-Touch:0.4'
     testCompile 'junit:junit:4.12'
 }
 
