--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:name=".MyWorkoutTrackerApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_mwt"
+        android:icon="@mipmap/ic_launcher_mwt2"
         tools:replace="android:icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -64,6 +64,13 @@
             android:screenOrientation="portrait"
             android:theme="@style/LoginTheme">
         </activity>
+
+        <activity android:name=".activity.AboutActivity"
+            android:label="@string/about_title"
+            android:theme="@style/EditUserDataTheme"
+            android:windowSoftInputMode="adjustPan"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
 
     </application>
 
